--- a/HPC/Cuaderno_1__Martes__grupo7_2021.ipynb
+++ b/HPC/Cuaderno_1__Martes__grupo7_2021.ipynb
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JthGdcMiWnST",
-        "outputId": "d9911126-5cc3-488d-c5a2-079b851329b1"
+        "outputId": "cf0fe91c-b751-431c-edef-07a7c8101fa3"
       },
       "source": [
         "#@title # 2.1 Parámetros de ejecución\n",
@@ -72,30 +72,30 @@
         "# Guardamos la imagen\n",
         "!wget {url_imagen} -O imagen.jpg"
       ],
-      "execution_count": 23,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-07-04 21:20:47--  https://github.com/jonyfernandez/TP2-SOA-Android/blob/master/HPC/unlam.jpg?raw=true\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "--2021-07-04 23:01:26--  https://github.com/jonyfernandez/TP2-SOA-Android/blob/master/HPC/unlam.jpg?raw=true\n",
+            "Resolving github.com (github.com)... 140.82.113.4\n",
+            "Connecting to github.com (github.com)|140.82.113.4|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://github.com/jonyfernandez/TP2-SOA-Android/raw/master/HPC/unlam.jpg [following]\n",
-            "--2021-07-04 21:20:47--  https://github.com/jonyfernandez/TP2-SOA-Android/raw/master/HPC/unlam.jpg\n",
+            "--2021-07-04 23:01:26--  https://github.com/jonyfernandez/TP2-SOA-Android/raw/master/HPC/unlam.jpg\n",
             "Reusing existing connection to github.com:443.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/jonyfernandez/TP2-SOA-Android/master/HPC/unlam.jpg [following]\n",
-            "--2021-07-04 21:20:47--  https://raw.githubusercontent.com/jonyfernandez/TP2-SOA-Android/master/HPC/unlam.jpg\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2021-07-04 23:01:26--  https://raw.githubusercontent.com/jonyfernandez/TP2-SOA-Android/master/HPC/unlam.jpg\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 147032 (144K) [image/jpeg]\n",
             "Saving to: ‘imagen.jpg’\n",
             "\n",
-            "imagen.jpg          100%[===================>] 143.59K  --.-KB/s    in 0.02s   \n",
+            "imagen.jpg          100%[===================>] 143.59K  --.-KB/s    in 0.01s   \n",
             "\n",
-            "2021-07-04 21:20:47 (8.37 MB/s) - ‘imagen.jpg’ saved [147032/147032]\n",
+            "2021-07-04 23:01:26 (9.41 MB/s) - ‘imagen.jpg’ saved [147032/147032]\n",
             "\n"
           ],
           "name": "stdout"
@@ -118,22 +118,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nr4kKGruXWOG",
-        "outputId": "a0926585-0cca-4c3d-8921-6f07e14ef9b0"
+        "outputId": "b65ea4b7-f392-47c7-d19b-dec0fa6a09e3"
       },
       "source": [
         "!pip install pycuda"
       ],
-      "execution_count": 25,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: pycuda in /usr/local/lib/python3.7/dist-packages (2021.1)\n",
-            "Requirement already satisfied: appdirs>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from pycuda) (1.4.4)\n",
-            "Requirement already satisfied: mako in /usr/local/lib/python3.7/dist-packages (from pycuda) (1.1.4)\n",
             "Requirement already satisfied: pytools>=2011.2 in /usr/local/lib/python3.7/dist-packages (from pycuda) (2021.2.7)\n",
-            "Requirement already satisfied: MarkupSafe>=0.9.2 in /usr/local/lib/python3.7/dist-packages (from mako->pycuda) (2.0.1)\n",
-            "Requirement already satisfied: numpy>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from pytools>=2011.2->pycuda) (1.19.5)\n"
+            "Requirement already satisfied: mako in /usr/local/lib/python3.7/dist-packages (from pycuda) (1.1.4)\n",
+            "Requirement already satisfied: appdirs>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from pycuda) (1.4.4)\n",
+            "Requirement already satisfied: numpy>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from pytools>=2011.2->pycuda) (1.19.5)\n",
+            "Requirement already satisfied: MarkupSafe>=0.9.2 in /usr/local/lib/python3.7/dist-packages (from mako->pycuda) (2.0.1)\n"
           ],
           "name": "stdout"
         }
@@ -227,7 +227,7 @@
         "# Muestro los atributos de las imagenes\n",
         "print(\"Detalles: \" + imagen.mode + \"- [\" + str(img_ancho) + \", \" + str(img_alto) + \"]\" )\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 350
         },
-        "outputId": "9a8a1331-71b9-40df-fea9-abff9972defc"
+        "outputId": "fc3793fc-1c4e-480a-e069-200a6350a033"
       },
       "source": [
         "%matplotlib inline\n",
@@ -341,14 +341,14 @@
         "  if( idx >= 1 && idx < ancho - 1 && idy >= 1 && idy < alto - 1 ) {\n",
         "\n",
         "         sum += img_O[ ((idx + (idy * ancho)) * 3) + channel ];\n",
-        "         sum += img_O[ (((idx - 1) + ( (idy - 1) * ancho)) * 3) + channel ];\n",
-        "         sum += img_O[ ((idx + ( (idy - 1) * ancho)) * 3) + channel];\n",
-        "         sum += img_O[ (((idx + 1) + ((idy - 1) * ancho)) * 3) + channel];\n",
+        "         sum += img_O[ (((idx - 1) + ((idy - 1) * ancho)) * 3) + channel ];\n",
         "         sum += img_O[ (((idx - 1) + (idy * ancho)) * 3) + channel];\n",
-        "         sum += img_O[ (((idx + 1) + (idy * ancho)) * 3) + channel];\n",
         "         sum += img_O[ (((idx - 1) + ((idy + 1) * ancho)) * 3) + channel];\n",
+        "         sum += img_O[ ((idx + ((idy - 1) * ancho)) * 3) + channel];\n",
         "         sum += img_O[ ((idx + ((idy + 1) * ancho)) * 3) + channel];\n",
-        "         sum += img_O[ (((idx+1) + ((idy+1) * ancho)) * 3) + channel];\n",
+        "         sum += img_O[ (((idx + 1) + ((idy - 1) * ancho)) * 3) + channel];\n",
+        "         sum += img_O[ (((idx + 1) + (idy * ancho)) * 3) + channel];\n",
+        "         sum += img_O[ (((idx + 1) + ((idy + 1) * ancho)) * 3) + channel];\n",
         "\n",
         "         suma /= 9;\n",
         "\n",
@@ -400,7 +400,7 @@
         "print(\"Tiempo TOTAL: \", tiempo_en_ms( tiempo_total ), \"[ms]\" )\n",
         "print(\"Tiempo GPU  : \", tiempo_en_ms( tiempo_img ), \"[ms]\" )"
       ],
-      "execution_count": 27,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "error",
@@ -409,7 +409,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-27-6f63e840c977>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mPIL\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpycuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautoinit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpycuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdriver\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcuda\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpycuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompiler\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSourceModule\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-30-be5ab8176886>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mPIL\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpycuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautoinit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpycuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdriver\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcuda\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpycuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompiler\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSourceModule\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pycuda/autoinit.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Initialize CUDA\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpycuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtools\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmake_default_context\u001b[0m  \u001b[0;31m# noqa: E402\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mRuntimeError\u001b[0m: cuInit failed: no CUDA-capable device is detected"
           ]
